--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
   "devDependencies": {
     "@types/css-modules": "^1.0.3",
     "gh-pages": "^6.0.0",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2"
+    "tailwindcss": "^3.3.3"
   }
 }
