--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.0.7",
-    "swiper": "^10.2.0",
+    "react-spring": "^9.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
